--- a/sass/misc/variables.scss
+++ b/sass/misc/variables.scss
@@ -1,20 +1,18 @@
-:root {
+
     /* Colours */
-    --primary:#95D0B1;
-    --secondary: #37AE88;
-    --text-color: #424242;
-    --box-color:#F0F0F0;
+    $primary:#95D0B1;
+    $secondary: #37AE88;
+    $text-color: #424242;
+    $box-color:#F0F0F0;
 
     /* Fonts Families */
-    --font-principal: 'Montserrat', sans-serif;
-    --font-titel: 'Pacifico', cursive;
+    $font-principal: 'Montserrat', sans-serif;
+    $font-titel: 'Pacifico', cursive;
 
     /* Fonts Sizes */
-    --text-xlarge: 7rem;
-    --text-large: 5rem;
-    --text-xmedium: 3rem;
-    --text-medium: 1.5rem;
-    --text-small: 1.3rem;
-    --text-smaller: 1rem;
-
-}
+    $text-xlarge: 7rem;
+    $text-large: 5rem;
+    $text-xmedium: 3rem;
+    $text-medium: 1.5rem;
+    $text-small: 1.3rem;
+    $text-smaller: 1rem;
