Full responsive + sass

--- a/css/translated.css
+++ b/css/translated.css
@@ -458,8 +458,10 @@ header {
     opacity: 1; } }
 
 /* Mobile Styles */
-@media screen and (max-width: 425px) {
-  .productosCards {
-    flex-direction: column; }
+@media screen and (max-width: 600px) {
   .indexTitulo {
     font-size: 3rem; } }
+
+@media screen and (max-width: 425px) {
+  .productosCards {
+    flex-direction: column; } }
