agregado de sass y metaetiquetas

--- a/sass/misc/variables.scss
+++ b/sass/misc/variables.scss
@@ -16,3 +16,13 @@
     $text-medium: 1.5rem;
     $text-small: 1.3rem;
     $text-smaller: 1rem;
+
+    /* Maps */
+    $fonts: (
+        "xlarge": 10rem,
+        "large": 5rem,
+        "xmedium": 3rem,
+        "medium": 1.5rem,
+        "small": 1.3rem,
+        "smaller": 1rem,
+)
