--- a/css/translated.css
+++ b/css/translated.css
@@ -5,6 +5,7 @@
 /* Colours */
 /* Fonts Families */
 /* Fonts Sizes */
+/* Maps */
 /* Reset CSS */
 * {
   margin: 0;
@@ -393,14 +394,13 @@ header {
 
 .indexTitulo {
   font-family: "Pacifico", cursive;
-  font-size: 7rem;
   color: #ffffff;
   text-shadow: 0.5px 0.5px 2px #000;
   text-align: center; }
 
 .indexTexto {
   font-family: "Montserrat", sans-serif;
-  font-size: 25px;
+  font-size: 1.5rem;
   color: #424242;
   text-align: center;
   padding: 40px;
@@ -420,8 +420,8 @@ header {
 .productosCard {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: center;
+  flex-wrap: wrap;
   padding: 30px; }
   .productosCard__box {
     display: flex;
@@ -436,8 +436,8 @@ header {
 .cardProductos__img:hover {
   width: 105%; }
 
-.button {
-  background-image: linear-gradient(to right, #95d0b1, #39c37b);
+.button, .button-medio {
+  background-color: #39c37b;
   border: none;
   color: white;
   padding: 12px 30px;
@@ -449,6 +449,34 @@ header {
   border-radius: 12px;
   text-transform: uppercase;
   margin: 30px 0px 0px 0px; }
+
+.button-medio {
+  background-color: #b5f2d2;
+  color: #000; }
+
+.indexTitulo-xlarge {
+  font-size: 10rem;
+  font-family: "Pacifico", cursive; }
+
+.indexTitulo-large {
+  font-size: 5rem;
+  font-family: "Pacifico", cursive; }
+
+.indexTitulo-xmedium {
+  font-size: 3rem;
+  font-family: "Pacifico", cursive; }
+
+.indexTitulo-medium {
+  font-size: 1.5rem;
+  font-family: "Pacifico", cursive; }
+
+.indexTitulo-small {
+  font-size: 1.3rem;
+  font-family: "Pacifico", cursive; }
+
+.indexTitulo-smaller {
+  font-size: 1rem;
+  font-family: "Pacifico", cursive; }
 
 /* Animations */
 @keyframes aparecer {
