--- a/css/translated.css
+++ b/css/translated.css
@@ -59,6 +59,16 @@ header {
   margin-bottom: 10px; }
 
 /* End Nav Bar */
+/* Mobile Styles */
+@media screen and (max-width: 991px) {
+  .header {
+    flex-direction: row;
+    justify-content: space-evenly; } }
+
+@media screen and (max-width: 425px) {
+  .logo {
+    width: 75px; } }
+
 /* Footer */
 .logo {
   max-width: 85px; }
@@ -306,13 +316,18 @@ header {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(6, auto); }
   .pedidosTitulo {
-    font-size: 3rem; } }
+    font-size: 3rem; }
+  .texto__Descripcion {
+    font-size: 1rem;
+    text-align: center; }
+  .texto__TituloCentrado {
+    font-size: 1.3rem;
+    text-align: center; } }
 
 @media screen and (max-width: 425px) {
-  .pedidosTitulo {
-    font-size: 3rem; }
   .pedidosSecciones {
-    margin: 35px 40px 80px 40px; } }
+    margin: 35px 30px 55px 30px;
+    padding: 30px; } }
 
 .productosTitulo {
   font-family: "Pacifico", cursive;
@@ -325,15 +340,15 @@ header {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: center;
-  padding: 50px;
+  justify-content: space-around;
   background-color: #F0F0F0;
   border-radius: 20px;
-  margin: 80px; }
+  padding: 70px;
+  margin: 100px; }
 
 .productosInternos__Img {
   width: 300px;
-  margin: 10px; }
+  margin: 20px; }
 
 .rotadorInterno__Fondo {
   background-image: url("../img/imgrotador-2.jpg");
@@ -351,15 +366,15 @@ header {
   font-size: 1.5rem;
   color: #37AE88;
   text-align: left;
-  margin: 20px 0px 10px 40px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  margin: 20px; }
 
 .productosTexto__Descripcion {
   font-family: "Montserrat", sans-serif;
   font-size: 1.3rem;
   color: #424242;
   text-align: left;
-  margin: 20px 0px 10px 40px; }
+  margin: 20px; }
 
 /* Mobile Styles */
 @media screen and (max-width: 768px) {
@@ -373,7 +388,8 @@ header {
     margin: 20px 10px 20px 10px; }
   .productosTexto__Descripcion {
     text-align: center;
-    margin: 20px 10px 20px 10px; } }
+    margin: 20px 10px 20px 10px;
+    font-size: 1rem; } }
 
 @media screen and (max-width: 425px) {
   .productosInternos__Img {
@@ -393,10 +409,11 @@ header {
   gap: 5px; }
 
 .indexTitulo {
-  font-family: "Pacifico", cursive;
   color: #ffffff;
-  text-shadow: 0.5px 0.5px 2px #000;
-  text-align: center; }
+  text-align: center;
+  font-family: "Pacifico", cursive;
+  font-size: 7rem;
+  text-shadow: 0.5px 0.5px 2px #000; }
 
 .indexTexto {
   font-family: "Montserrat", sans-serif;
@@ -455,28 +472,22 @@ header {
   color: #000; }
 
 .indexTitulo-xlarge {
-  font-size: 10rem;
-  font-family: "Pacifico", cursive; }
+  font-size: 10rem; }
 
 .indexTitulo-large {
-  font-size: 5rem;
-  font-family: "Pacifico", cursive; }
+  font-size: 5rem; }
 
 .indexTitulo-xmedium {
-  font-size: 3rem;
-  font-family: "Pacifico", cursive; }
+  font-size: 3rem; }
 
 .indexTitulo-medium {
-  font-size: 1.5rem;
-  font-family: "Pacifico", cursive; }
+  font-size: 1.5rem; }
 
 .indexTitulo-small {
-  font-size: 1.3rem;
-  font-family: "Pacifico", cursive; }
+  font-size: 1.3rem; }
 
 .indexTitulo-smaller {
-  font-size: 1rem;
-  font-family: "Pacifico", cursive; }
+  font-size: 1rem; }
 
 /* Animations */
 @keyframes aparecer {
@@ -488,7 +499,9 @@ header {
 /* Mobile Styles */
 @media screen and (max-width: 600px) {
   .indexTitulo {
-    font-size: 3rem; } }
+    font-size: 3rem; }
+  .indexTexto {
+    font-size: 1.3rem; } }
 
 @media screen and (max-width: 425px) {
   .productosCards {
