--- a/sass/partials/footer.scss
+++ b/sass/partials/footer.scss
@@ -23,10 +23,10 @@
     }
     &Texto__Titulo{
         font-family: 'Montserrat', sans-serif;
-        font-size: $text-small;
+        font-size: $text-smaller;
         color: $text-color;
         text-align: left;
-        font-weight:bolder;
+        font-weight:600;
     }
 }
 
