--- a/sass/views/pedidos.scss
+++ b/sass/views/pedidos.scss
@@ -36,6 +36,7 @@
     &__TituloCentrado{
     font-family: $font-principal;
     font-size: $text-medium;
+    font-weight: 600;
     color: $secondary;
     text-align: center;
     margin: 10px;
