--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,7 +1,7 @@
 /* Externos */
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Source+Sans+Pro:wght@600&display=swap');
 /* Misc */
 @import "./misc/variables.scss";
 @import "./misc/normailize.scss";
