--- a/sass/views/nosotros.scss
+++ b/sass/views/nosotros.scss
@@ -101,4 +101,10 @@
     .nosotrosTitulo{
         font-size: $text-xmedium;
     }
+    .textoNosotros__Titulo {
+        font-size: $text-small;
+    }
+    .textoNosotros__Descripcion {
+        font-size: $text-smaller;
+    }
 }
