cambio de imgenes y prueba de trajetas diferentes

--- a/css/translated.css
+++ b/css/translated.css
@@ -538,6 +538,9 @@ header {
 .whatsapp-icon {
   margin-top: 13px; }
 
+.carousel-caption {
+  top: 15%; }
+
 /* Mobile Styles */
 @media screen and (max-width: 770px) {
   .whatsapp {
