--- a/sass/views/home.scss
+++ b/sass/views/home.scss
@@ -123,6 +123,10 @@
     margin-top:13px;
   }
 
+  .carousel-caption{
+    top: 15%;
+  }
+
 /* Mobile Styles */
 
 @media screen and (max-width: 770px) {
