--- a/css/translated.css
+++ b/css/translated.css
@@ -282,28 +282,40 @@ header {
   flex-wrap: nowrap;
   align-items: center; }
 
-.pedidosTitulo {
-  font-family: "Pacifico", cursive;
-  font-size: 5rem;
-  color: #ffffff;
-  text-shadow: 0.5px 0.5px 2px #000;
-  text-align: center; }
-
-.pedidosSecciones {
-  justify-content: center;
-  padding: 50px;
-  background-color: #F0F0F0;
-  margin: 50px 70px 100px 70px;
-  border-radius: 20px;
+.pedidos {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  flex-direction: row;
   align-self: center;
-  align-content: center; }
+  align-content: center;
+  justify-content: center; }
+  .pedidosTitulo {
+    font-family: "Pacifico", cursive;
+    font-size: 5rem;
+    color: #ffffff;
+    text-shadow: 0.5px 0.5px 2px #000;
+    text-align: center; }
+  .pedidosSecciones {
+    justify-content: center;
+    padding: 20px;
+    background-color: #F0F0F0;
+    margin: 0px 20px 50px 20px;
+    border-radius: 20px;
+    width: 400px; }
 
 .texto__TituloCentrado {
   font-family: "Montserrat", sans-serif;
   font-size: 1.5rem;
+  font-weight: 600;
+  color: #37AE88;
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 30px;
+  text-transform: uppercase; }
+
+.texto__TituloInterno {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1.3rem;
   font-weight: 600;
   color: #37AE88;
   text-align: center;
@@ -314,7 +326,7 @@ header {
   font-family: "Montserrat", sans-serif;
   font-size: 1.3rem;
   color: #424242;
-  text-align: left;
+  text-align: center;
   margin: 20px 10px 10px 10px; }
 
 .gridPedidos__ImagenesProductos {
@@ -494,7 +506,7 @@ header {
   margin: 30px 0px 0px 0px; }
 
 .button-medio {
-  background-color: #b5f2d2;
+  background-color: #a1f5ca;
   color: #000; }
 
 .indexTitulo-xlarge {
